[gd_scene load_steps=19 format=3 uid="uid://dg0xoqfe8kuej"]

[ext_resource type="Script" path="res://burst_your_bubble_rnd.gd" id="1_f7313"]
[ext_resource type="PackedScene" uid="uid://b6u84hlcs25bm" path="res://mob.tscn" id="2_wfa5i"]
[ext_resource type="Texture2D" uid="uid://3sjtoj6o0qdm" path="res://svg/brick.svg" id="3_mt7s7"]
[ext_resource type="Texture2D" uid="uid://b6javs87mb27r" path="res://svg/bird.svg" id="4_ph2i0"]
[ext_resource type="Script" path="res://timer.gd" id="5_pqmqn"]
[ext_resource type="Script" path="res://Score.gd" id="6_7xn75"]
[ext_resource type="Texture2D" uid="uid://db1ywg8dls5au" path="res://svg/coin.svg" id="7_2pj8a"]
[ext_resource type="PackedScene" uid="uid://58yxr3yg5iei" path="res://player.tscn" id="7_85j86"]
[ext_resource type="AudioStream" uid="uid://lm5bhoo2gqob" path="res://audio/uded.ogg" id="8_7663h"]
[ext_resource type="AudioStream" uid="uid://b14wcne1n1cv4" path="res://audio/door_open.ogg" id="9_k8mhu"]

[sub_resource type="Curve2D" id="Curve2D_ueypw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2.08165e-12, 2.08165e-12, 0, 0, 0, 0, 1920, 2.08165e-12, 0, 0, 0, 0, 1920, 1080, 0, 0, 0, 0, 2.08165e-12, 1080, 0, 0, 0, 0, 2.08165e-12, 2.08165e-12)
}
point_count = 5

[sub_resource type="SystemFont" id="SystemFont_236ut"]

[sub_resource type="FontVariation" id="FontVariation_0fv2f"]
base_font = SubResource("SystemFont_236ut")

[sub_resource type="Theme" id="Theme_q7lke"]
/fonts/bar = SubResource("FontVariation_0fv2f")

[sub_resource type="SystemFont" id="SystemFont_dh8ug"]

[sub_resource type="LabelSettings" id="LabelSettings_0qvyv"]
font = SubResource("SystemFont_dh8ug")
font_size = 189
shadow_color = Color(0.831373, 0, 0, 0.792157)

[sub_resource type="InputEventAction" id="InputEventAction_yh35o"]
action = &"start_game"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_sjyji"]
events = [SubResource("InputEventAction_yh35o")]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_f7313")
mob_scene = ExtResource("2_wfa5i")

[node name="bg_color" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.584314, 0.141176, 0.552941, 1)

[node name="background" type="Node" parent="."]

[node name="game_meta" type="Node" parent="."]

[node name="StartPosition" type="Marker2D" parent="game_meta"]
position = Vector2(500, 200)

[node name="MobTimer" type="Timer" parent="game_meta"]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="game_meta"]

[node name="StartTimer" type="Timer" parent="game_meta"]
wait_time = 0.5
one_shot = true

[node name="MobPath" type="Path2D" parent="game_meta"]
curve = SubResource("Curve2D_ueypw")

[node name="MobSpawnLocation" type="PathFollow2D" parent="game_meta/MobPath"]
position = Vector2(2.08165e-12, 2.08165e-12)

[node name="mobs" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource("7_85j86")]

[node name="Hud" type="Node" parent="."]

[node name="Timer" type="Label" parent="Hud"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -53.0
offset_top = 17.0
offset_right = -13.0
offset_bottom = 43.0
grow_horizontal = 0
text = "foo"
horizontal_alignment = 2
script = ExtResource("5_pqmqn")

[node name="Score" type="Label" parent="Hud"]
offset_left = 1863.0
offset_top = 54.0
offset_right = 1903.0
offset_bottom = 80.0
text = "-1"
horizontal_alignment = 2
script = ExtResource("6_7xn75")

[node name="uded" type="Label" parent="Hud"]
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.0
offset_top = -131.0
offset_right = 257.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_q7lke")
text = "u ded"
label_settings = SubResource("LabelSettings_0qvyv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="start_button" type="TextureButton" parent="Hud"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 148.0
offset_right = 67.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_sjyji")
texture_normal = ExtResource("3_mt7s7")
texture_pressed = ExtResource("4_ph2i0")
texture_hover = ExtResource("7_2pj8a")

[node name="Sound" type="Node" parent="."]

[node name="death_sound" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("8_7663h")

[node name="start_sound" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("9_k8mhu")

[connection signal="timeout" from="game_meta/MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="game_meta/ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="game_meta/StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="button_down" from="Hud/start_button" to="." method="_on_start_button_button_down"]
